--- a/app/views/planetary_systems/index.html.erb
+++ b/app/views/planetary_systems/index.html.erb
@@ -1,5 +1,5 @@
 <h1><strong>Planetary Systems</strong></h1>
 
-<% @planetary_systems.each do |system| %>
+<% @planetary_systems_most_recent.each do |system| %>
   <p><%= system.name %></p><br>
 <% end %>
