--- a/app/views/planetary_systems/index.html.erb
+++ b/app/views/planetary_systems/index.html.erb
@@ -1,5 +1,7 @@
 <h1><strong>Planetary Systems</strong></h1>
 
 <% @planetary_systems_most_recent.each do |system| %>
-  <p><%= system.name %></p><br>
+  <ul>
+    <li><strong><%= system.name %></strong> Created at: <%= system.created_at %></li>
+  </ul>
 <% end %>
