feat: Planet count in planetary systems show page

--- a/app/views/planetary_systems/show.html.erb
+++ b/app/views/planetary_systems/show.html.erb
@@ -1,4 +1,5 @@
-<h1><strong><%= @planetary_system.name %></strong></h1>
+<h1><strong><%= @planetary_system.name %></strong></h1> 
+<p1>Current Number of Planets: <%= @planet_count %></p1><br>
 
 <p1> Planet ID: <%= @id %></p1><br>
 <p1> Light Years From Earth: <%= @light_years_from_earth %></p1><br>
