feat: Add links to layout in views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <p><%= link_to('Planets Index', planets_path) %></p>
+    <p><%= link_to('Planets Index', planets_path) %> | <%= link_to('Planetary Systems', '/planetary_systems') %></p>
     <%= yield %>
   </body>
 </html>
