feat/fix: Planetary system id text field changed to hidden

--- a/app/views/planetary_system_planets/new.html.erb
+++ b/app/views/planetary_system_planets/new.html.erb
@@ -16,8 +16,7 @@
     <%= form.text_field :confirmed %>
   </div>
   <div>
-    <%= form.label :planetary_system_id, "Planetary System ID" %>
-    <%= form.text_field :planetary_system_id, required: true, class: 'form-control', value: @planetary_system.try(:id) %>
+    <%= form.text_field :planetary_system_id, hidden: true, value: @planetary_system.try(:id) %>
   </div> 
 
   <%= form.submit "Create Planet" %>
