fix/feat: Update planet and redirect to show page with passing test

--- a/app/views/planets/edit.html.erb
+++ b/app/views/planets/edit.html.erb
@@ -13,7 +13,7 @@
   <%= form.label :confirmed, "Confirmed?" %>
   <%= form.text_field :confirmed %><br>
   
-  <%= form.text_field :planetary_system_id, hidden: true, value: @planet.try(:id) %> 
+  <%= form.text_field :planetary_system_id, hidden: true, value: @planet.try(:planetary_system_id) %> 
 
   <%= form.submit "Update Planet" %>
 <% end %>
