feat: Orders planets in system planets index alphabetically

--- a/app/views/planetary_system_planets/index.html.erb
+++ b/app/views/planetary_system_planets/index.html.erb
@@ -9,3 +9,5 @@
 <% end %>
 
 <%= link_to("Create Planet", "/planetary_systems/#{@planetary_system.id}/planets/new") %>
+<br>
+<%= link_to("Sort Planets Alphabetically", order: "alphabetical") %>
