feat: Delete planetary system record with passing test

--- a/app/views/planetary_systems/index.html.erb
+++ b/app/views/planetary_systems/index.html.erb
@@ -2,8 +2,11 @@
 
 <% @planetary_systems.each do |system| %>
   <ul>
-    <li><strong><%= system.name %></strong> Created at: <%= system.created_at %> <%= link_to("Edit #{system.name}", "/planetary_systems/#{system.id}/edit") %></li>
+    <li><strong><%= system.name %></strong> Created at: <%= system.created_at %> 
+    <%= link_to("Edit #{system.name}", "/planetary_systems/#{system.id}/edit") %> ==
+    <%= link_to("Delete #{system.name}", "planetary_systems/#{system.id}/delete") %>
+    </li>
   </ul>
-<% end %> 
+<% end %><br>
 
 <%= link_to('New Planetary System', '/planetary_systems/new') %>
