feat: system planet count added to model and changed in controller

--- a/app/views/planetary_systems/show.html.erb
+++ b/app/views/planetary_systems/show.html.erb
@@ -1,10 +1,10 @@
 <h1><strong><%= @planetary_system.name %></strong></h1> 
 <p1>Current Number of Planets: <%= @planet_count %></p1><br>
 
-<p1> Planet ID: <%= @id %></p1><br>
-<p1> Light Years From Earth: <%= @light_years_from_earth %></p1><br>
-<p1> Star Age: <%= @star_age %></p1><br> 
-<p1> Metal Rich Star?: <%= @metal_rich_star %></p1>
+<p1> Planet ID: <%= @planetary_system.id %></p1><br>
+<p1> Light Years From Earth: <%= @planetary_system.light_years_from_earth %></p1><br>
+<p1> Star Age: <%= @planetary_system.star_age %></p1><br> 
+<p1> Metal Rich Star?: <%= @planetary_system.metal_rich_star %></p1>
 <br>
 <br>
 
