test/fix/feat: Changed button/link names in view and spec

--- a/app/views/planetary_systems/edit.html.erb
+++ b/app/views/planetary_systems/edit.html.erb
@@ -11,5 +11,5 @@
   <%= form.label :metal_rich_star, "Metal Rich Star?" %>
   <%= form.text_field :metal_rich_star %>
 
-  <%= form.submit "Update Planetary System" %>
+  <%= form.submit "Update #{@planetary_system.name}" %>
 <% end %>
