--- a/app/views/planetary_systems/show.html.erb
+++ b/app/views/planetary_systems/show.html.erb
@@ -6,9 +6,8 @@
 <p1> Star Age: <%= @planetary_system.star_age %></p1><br> 
 <p1> Metal Rich Star?: <%= @planetary_system.metal_rich_star %></p1>
 <br>
+
+<p1><strong><%= link_to("#{@planetary_system.name} Planets", "/planetary_systems/#{@planetary_system.id}/planets") %></strong></p1><br>
 <br>
-
-<p1><strong><%= link_to("#{@planetary_system.name} Planets", "/planetary_systems/#{@planetary_system.id}/planets") %></strong></p1>
-
-<%= link_to("Update Planetary Systems", "/planetary_systems/#{@planetary_system.id}/edit") %>
+<%= link_to("Update #{@planetary_system.name}", "/planetary_systems/#{@planetary_system.id}/edit") %><br>
 <%= link_to("Delete #{@planetary_system.name}", "/planetary_systems/#{@planetary_system.id}", method: :delete) %>
