fix: Removes unnecessary route for delete link. Adds method to delete in link to

--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -3,7 +3,7 @@
 <% @planets.each do |planet| %>
   <h4><%= planet.name %> 
     <span style="font-weight:normal"><%= link_to("Update #{planet.name}", "/planets/#{planet.id}/edit")%>
-    <span style="font-weight:normal"><%=link_to("Delete #{planet.name}", "/planets/#{planet.id}/delete")%>
+    <span style="font-weight:normal"><%=link_to("Delete #{planet.name}", "/planets/#{planet.id}", method: :delete)%>
   </h4>
   <ul>
     <li>Planet Type: <%= planet.planet_type %></li>
