--- a/app/views/planetary_system_planets/index.html.erb
+++ b/app/views/planetary_system_planets/index.html.erb
@@ -3,7 +3,7 @@
 <% @planets_in_system.each do |planet| %>
   <h4><%= planet.name %> 
     <span style="font-weight:normal"><%= link_to("Update #{planet.name}", "/planets/#{planet.id}/edit")%>
-     <span style="font-weight:normal"><%=link_to("Delete #{planet.name}", "/planets/#{planet.id}/delete")%>
+     <span style="font-weight:normal"><%=link_to("Delete #{planet.name}", "/planets/#{planet.id}", method: :delete)%>
   </h4>
   <p>Planet Type: <%= planet.planet_type %></p>
   <p>Year Discovered: <%= planet.year_discovered %></p>
