--- a/app/views/planetary_systems/index.html.erb
+++ b/app/views/planetary_systems/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Planetary Systems</h1>
+<%= link_to "Sort Systems by Number of Planets", order: "num_of_planets" %>
 
 <% @planetary_systems.each do |system| %>
   <ul>
