--- a/app/views/planetary_system_planets/new.html.erb
+++ b/app/views/planetary_system_planets/new.html.erb
@@ -10,11 +10,16 @@
   </div> 
   <div>
     <%= form.label :year_discovered, "Year Discovered" %>
-    <%= form.text_field :year_discovered %>
+    <%= form.number_field :year_discovered %>
   </div>
   <div>
-    <%= form.label :confirmed, "Confirmed?" %>
-    <%= form.text_field :confirmed %>
+    <%#= form.label :confirmed, "Confirmed?" %>
+    <%#= form.text_field :confirmed %> 
+    <%= form.label :confirmed, "Confirmed?" %><br>
+    <%= form.radio_button :confirmed, "true" %>
+    <%= form.label :confirmed_true, "true" %>
+    <%= form.radio_button :confirmed, "false" %>
+    <%= form.label :confirmed_false, "false" %><br>
   </div>
   <div>
     <%= form.text_field :planetary_system_id, hidden: true, value: @planetary_system.try(:id) %>
