--- a/app/views/planets/edit.html.erb
+++ b/app/views/planets/edit.html.erb
@@ -8,10 +8,15 @@
   <%= form.text_field :planet_type %><br>
   
   <%= form.label :year_discovered, "Year Discovered" %>
-  <%= form.text_field :year_discovered %><br>
+  <%= form.number_field :year_discovered %><br>
   
-  <%= form.label :confirmed, "Confirmed?" %>
-  <%= form.text_field :confirmed %><br>
+  <%#= form.label :confirmed, "Confirmed?" %>
+  <%#= form.text_field :confirmed %>
+  <%= form.label :confirmed, "Confirmed?" %><br>
+  <%= form.radio_button :confirmed, "true" %>
+  <%= form.label :confirmed_true, "true" %>
+  <%= form.radio_button :confirmed, "false" %>
+  <%= form.label :confirmed_false, "false" %><br>
   
   <%= form.text_field :planetary_system_id, hidden: true, value: @planet.try(:planetary_system_id) %> 
 
