--- a/app/views/planets/index.html.erb
+++ b/app/views/planets/index.html.erb
@@ -1,5 +1,11 @@
 <h1><strong>Planets</strong></h1>
 
+<%= form_with url: "/planets", method: :get do |form| %>
+  <%= form.label :query, "Enter Planet Name" %>
+  <%= form.text_field :query %>
+  <%= form.submit "Search" %>
+<% end %>
+
 <% @planets.each do |planet| %>
   <h4><%= planet.name %> 
     <span style="font-weight:normal"><%= link_to("Update #{planet.name}", "/planets/#{planet.id}/edit")%>
